# weed_detection

./: CMakeLists.txt  package.xml  weed_detection_rosconsole.conf
config/: arm_camera_node.yaml  detection_manager.yaml  front_camera_node.yaml
include/: Ctracker.h  ball_detector.h  detection_manager.h
launch/: weed_detection.launch
msg/: detected_balls.msg
src/: Ctracker.cpp  Kalman.cpp  arm_camera_node.cpp  ball_detector.cpp  detection_manager.cpp  front_camera_node.cpp
